crates/cli/tests/snapshots/run_node_test__handles_process_exit_code_zero.snap
---
source: crates/cli/tests/run_node_test.rs
expression: assert.output()
---
▪▪▪▪ npm install
▪▪▪▪ node:exitCodeZero
stdout
This should appear!
▪▪▪▪ node:exitCodeZero (100ms)
stderr

Tasks: 1 completed
 Time: 100ms



