crates/cli/tests/snapshots/run_node_test__handles_process_exit_nonzero.snap
---
source: crates/cli/tests/run_node_test.rs
expression: assert.output()
---
▪▪▪▪ npm install
▪▪▪▪ node:processExitNonZero
stdout
▪▪▪▪ node:processExitNonZero (100ms)
stderr
Error:   × Process node failed with a 1 exit code.



