crates/cli/tests/snapshots/run_node_test__handles_process_exit_zero.snap
---
source: crates/cli/tests/run_node_test.rs
expression: assert.output()
---
▪▪▪▪ npm install
▪▪▪▪ node:processExitZero
stdout
▪▪▪▪ node:processExitZero (100ms)
stderr

Tasks: 1 completed
 Time: 100ms



