crates/cli/tests/snapshots/run_node_test__handles_unhandled_promise.snap
---
source: crates/cli/tests/run_node_test.rs
expression: assert.output()
---
▪▪▪▪ npm install
▪▪▪▪ node:unhandledPromise
stdout
▪▪▪▪ node:unhandledPromise (100ms)
stderr
node:internal/process/promises:288
            triggerUncaughtException(err, true /* fromPromise */);
            ^
[UnhandledPromiseRejection: This error originated either by throwing inside of an async function without a catch block, or by rejecting a promise which was not handled with .catch(). The promise rejected with the reason "Oops".] {
  code: 'ERR_UNHANDLED_REJECTION'
}
Node.js v18.0.0
Error: task_runner::run_failed

  × Task node:unhandledPromise failed to run. View hash details with moon
  │ query hash hash1234.
  ╰─▶ Process node failed with a 1 exit code.



