crates/cli/tests/snapshots/run_node_test__passes_args_through.snap
---
source: crates/cli/tests/run_node_test.rs
expression: assert.output()
---
▪▪▪▪ npm install
▪▪▪▪ node:passthroughArgs
Args: -aBc --opt value --optCamel=value foo bar baz --opt-kebab 123
▪▪▪▪ node:passthroughArgs (100ms)

Tasks: 1 completed
 Time: 100ms



