crates/cli/tests/snapshots/run_node_test__passes_args_to_the_node_bin.snap
---
source: crates/cli/tests/run_node_test.rs
expression: assert.output()
---
▪▪▪▪ npm install
▪▪▪▪ node:binExecArgs
[ '--preserve-symlinks' ]
▪▪▪▪ node:binExecArgs (100ms)

Tasks: 1 completed
 Time: 100ms



