crates/cli/tests/snapshots/run_node_test__runs_cjs_files.snap
---
source: crates/cli/tests/run_node_test.rs
expression: assert.output()
---
▪▪▪▪ npm install
▪▪▪▪ node:cjs
stdout
▪▪▪▪ node:cjs (100ms)
stderr

Tasks: 1 completed
 Time: 100ms



