crates/cli/tests/snapshots/run_node_test__runs_from_project_root.snap
---
source: crates/cli/tests/run_node_test.rs
assertion_line: 229
expression: "get_path_safe_output(&assert, fixture.path())"
---
▪▪▪▪ npm install
▪▪▪▪ node:runFromProject
<WORKSPACE>/base

Tasks: 1 completed
 Time: 100ms



