crates/cli/tests/snapshots/run_node_test__runs_npm_bin_from_workspace_root.snap
---
source: crates/cli/tests/run_node_test.rs
assertion_line: 317
expression: assert.output()
---
▪▪▪▪ npm install
▪▪▪▪ node:runFromWorkspaceBin
Checking formatting...
All matched files use Prettier code style!
▪▪▪▪ node:runFromWorkspaceBin (100ms)

Tasks: 1 completed
 Time: 100ms



